--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OS_Services</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <div class="sidebar">
+            <div class="logo-titulos">
+                <div class="logo">
+                    <i class="bi bi-wrench-adjustable"></i>
+                </div>
+                <div class="titulos">
+                    <h3>OS Services</h3>
+                    <p>Gestão de OS</p>
+                </div>
+            </div>
+              
+            <div class="lista">
+                <ul>
+                    <li><i class="bi bi-motherboard"></i> Dashboard</li>
+                    <li><i class="bi bi-clipboard2-data"></i> Ordens de Serviço</li>
+                    <li><i class="bi bi-person-add"></i> Clientes</li>
+                    <li><i class="bi bi-cash-coin"></i> Financeiro</li>
+                </ul>
+            </div>
+        </div>
+
+        <main>
+            <h1>Dashboard</h1>
+            <h3>Visão Geral do sistema</h3>
+        </main>
     
 </body>
 </html>
