--- a/HTML/usuarios.html
+++ b/HTML/usuarios.html
@@ -35,6 +35,7 @@
             <button id="novo_usuario">Novo Ususario</button>
 
             <div class="formulario">
+                <h1 class="fechar_form" id="fechar_form">X</h1>
                 <form action="POST">
                     <fieldset>
                         <legend>
@@ -57,7 +58,7 @@
                             <label for="permissao">Permissão</label>
                             <select name="permissao" id="permissao" class="permissao">
                                 <option value="ADM">ADM</option>
-                                <option value="ADM">TECH</option>
+                                <option value="TECH">TECH</option>
                             </select>
                         </div>
                         <div>
@@ -76,7 +77,7 @@
                     <th>permissão</th>
                     <th>Ações</th>
                 </thead>
-                <tbody>
+                <tbody id="corpo_tabela">
                     <tr>
                         <td>Edson vitor</td>
                         <td>edsoncousa@gmail.com</td>
@@ -89,7 +90,7 @@
         </main>
 </body>
 
-<script src="/JavaScript/interface_usuarios.js"></script>
 <script src="/JavaScript/usuarios.js"></script>
+<script src="/JavaScript/interface_usuarios.js"></script>
 
 </html>
